fix: sample data swagger
