# docs/swagger.json
@@ -76,7 +76,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/models.Auth"
+                            "$ref": "#/definitions/models.AuthRegister"
                         }
                     }
                 ],
@@ -238,7 +238,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/models.Logistics"
+                            "$ref": "#/definitions/models.LogisticsCreate"
                         }
                     }
                 ],
@@ -272,18 +272,20 @@
         }
     },
     "definitions": {
-        "models.Auth": {
+        "models.AuthLogin": {
             "type": "object",
             "properties": {
-                "created_at": {
+                "msisdn": {
                     "type": "string"
                 },
-                "created_by": {
+                "password": {
                     "type": "string"
-                },
-                "id": {
-                    "type": "string"
-                },
+                }
+            }
+        },
+        "models.AuthRegister": {
+            "type": "object",
+            "properties": {
                 "msisdn": {
                     "type": "string"
                 },
@@ -294,17 +296,6 @@
                     "type": "string"
                 },
                 "username": {
-                    "type": "string"
-                }
-            }
-        },
-        "models.AuthLogin": {
-            "type": "object",
-            "properties": {
-                "msisdn": {
-                    "type": "string"
-                },
-                "password": {
                     "type": "string"
                 }
             }
@@ -321,17 +312,11 @@
                 }
             }
         },
-        "models.Logistics": {
+        "models.LogisticsCreate": {
             "type": "object",
             "properties": {
                 "amount": {
                     "type": "number"
-                },
-                "created_at": {
-                    "type": "string"
-                },
-                "created_by": {
-                    "type": "string"
                 },
                 "destination_name": {
                     "type": "string"
@@ -339,30 +324,18 @@
                 "duration": {
                     "type": "string"
                 },
-                "id": {
-                    "type": "string"
-                },
-                "is_active": {
-                    "type": "boolean"
-                },
                 "logistic_name": {
                     "type": "string"
                 },
                 "origin_name": {
-                    "type": "string"
-                },
-                "updated_at": {
-                    "type": "string"
-                },
-                "updated_by": {
                     "type": "string"
                 }
             }
         }
     },
     "securityDefinitions": {
-        "Token": {
-            "description": "Provide the JWT token directly in the Authorization header without the \"Bearer\" prefix.",
+        "Bearer": {
+            "description": "Type \"Bearer\" followed by a space and JWT token.",
             "type": "apiKey",
             "name": "Authorization",
             "in": "header"
