# models/logistic.go
@@ -15,3 +15,11 @@ type Logistics struct {
 	UpdatedAt			time.Time `json:"updated_at"`
 	UpdatedBy			string `json:"updated_by"`
 }
+
+type LogisticsCreate struct { 
+	LogisticName		string `json:"logistic_name"`
+	Amount				float32 `json:"amount"`
+	DestinationName		string `json:"destination_name"`
+	OriginName			string `json:"origin_name"`
+	Duration			string `json:"duration"` 
+}
